src/AnimateHeight/animate-height.scss
@import '../Tokens/common';

.animate-height {
  &__wrapper {
    margin: 0;
    padding: 0;
    transition: height 0.2s ease-in-out, margin 0.2s ease-in-out,
      padding 0.2s ease-in-out;
    overflow: hidden;

    &--expanded {
      margin: -1rem;
      padding: 1rem;
    }
  }

  &__children-container {
    margin: -1rem;
    padding: 1rem;
  }
}

